This changes the age verification to a simpler yes/no prompt
and further tweaks some of the UIX

--- a/html/index.html
+++ b/html/index.html
@@ -21,31 +21,17 @@
         <div class="col-sm-4">
         </div>
         <div class=" container col-sm-4">
-                <div class="errors">
-                    </div>    
+            <div class="errors">
+            </div>    
             <div class="main_container"> 
                    
                 <h2>Welcome to the Dublin-Worthington Rotary Bourbon Raffle</h2>
-                <p>You must be <strong>21</strong> or over to enter. Please enter your date of birth.</p>
+                <p>Are you <strong>21</strong> or over?</p>
 
                 <div class="fields">
-                    <select class="month">
-                        <option value="0">January</option>
-                        <option value="1">February</option>
-                        <option value="2">March</option>
-                        <option value="3">April</option>
-                        <option value="4">May</option>
-                        <option value="5">June</option>
-                        <option value="6">July</option>
-                        <option value="7">August</option>
-                        <option value="8">September</option>
-                        <option value="9">October</option>
-                        <option value="10">November</option>
-                        <option value="11">December</option>
-                    </select>
-                    <input class="day" maxlength="2" placeholder="DD" />
-                    <input class="year" maxlength="4" placeholder="YYYY" />
-                    <button class="submit_date">Submit</button>
+
+                    <button class="yes">Yes</button>
+                    <button class="no">No</button>
                    
                 </div>
             </div>
